Domain, Console, And Tests

--- a/my-console-app/my-console-app.csproj
+++ b/my-console-app/my-console-app.csproj
@@ -7,4 +7,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\PizzaStore\PizzaStore.csproj" />
+  </ItemGroup>
+
 </Project>
